# stock-insight-app

./: .bandit  .gitattributes  .gitignore  .gitleaks.toml  .semgrepignore  CLAUDE.md  CONTRIBUTING.md  PAYMENT_STATUS.md  README.ko.md  README.md  SECURITY_AUDIT_REPORT.md  URGENT_SECURITY_ACTIONS.md  WINDOWS_POSTGRES_SETUP.md  setup_postgres.sql  test_db_connection.py
.cursor/rules/: global_rule.mdc
.github/: DEPLOYMENT.md  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  security.yml
.omc/autopilot/: spec.md
.omc/sessions/: 3c1cd2ec-daa7-4a83-a9f8-cc31a03a5a14.json  8ce1f2f2-dbef-4bf1-981c-ad57cd4ee7d8.json  fa7a75ae-bee0-442c-97fb-a83ab70f82e4.json
.omc/state/: WORKER_5_COMPLETE  ultrapilot-state.json  worker-5-FINAL-SUMMARY.md  worker-5-security-complete.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  NEWS_COLLECTOR_README.md  README.md  TESTING_WITHOUT_DOCKER.md  docker-compose.yml  env.example  koyeb.yaml  main.py  pyproject.toml  requirements.txt  run_tests.bat  run_tests.sh  test_kr_stock.py
backend/.omc/sessions/: e9db204c-a6c5-4b37-9808-2f7da0c18acc.json
backend/app/: __init__.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  stock_insight.py
backend/app/routers/: analysis.py  payment.py
backend/app/schemas/: __init__.py  analysis.py  payment.py
backend/app/services/: __init__.py  kr_stock_cache.py  payment_service.py  payment_store.py  prompts.py  response_parser.py  stock_data_service.py  stock_insight_engine.py
backend/tests/: test_user_isolation.py
claudedocs/: research_app_ideas_from_communities_20260128.md  research_low_cost_deployment_20260127.md
docs/: GETTING_STARTED.md  README.md  SECURITY.md
docs/api/: ANALYSIS_API.md  AUTHENTICATION.md  BACKEND_API.md  PAYMENT_API.md  README.md
docs/architecture/: AI_PIPELINE.md  DATA_FLOW.md  SYSTEM_DESIGN.md  SYSTEM_OVERVIEW.md  multi-symbol-system-spec.md  notification-system-design.md  user-isolation-design.md
docs/backend/: MODELS.md  SERVICES.md
docs/design/: AI_ANALYSIS_PIPELINE_DESIGN.md  chart-improvement-design.md  community-system-design.md  mobile-chart-ui.md
docs/designs/: sentiment-analysis-pipeline.md
docs/frontend/: COMPONENTS.md  HOOKS.md  STORES.md
docs/guides/: DEPLOYMENT.md  DEVELOPMENT.md  TESTING.md  TROUBLESHOOTING.md
frontend/: .env.example  analyze-spacing.spec.ts  capture-recent-analysis.spec.ts  e2e-test.spec.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  test-card-spacing.spec.ts  verify-card-gap.spec.ts  wrangler.toml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: date.ts
frontend/playwright-report/: index.html
frontend/types/: api.ts  (+3 more)
(+33 files in other folders)
