[project]
name = "stock-insight-backend"
version = "1.0.0"
description = "AI-powered stock deep research analysis backend"
requires-python = ">=3.11"

[tool.ruff]
# Target Python version
target-version = "py311"

# Line length
line-length = 100

# Exclude directories
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".git",
    "alembic",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "S",      # flake8-bandit (security)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults (FastAPI Depends)
    "S101",   # Use of assert (fine in tests)
    "S104",   # Possible binding to all interfaces (FastAPI default)
    "S105",   # Possible hardcoded password (false positives on variable names)
    "S106",   # Possible hardcoded password (false positives on variable names)
    "ARG001", # Unused function argument (common in FastAPI dependencies)
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Allow asserts in tests
    "ARG",    # Allow unused arguments in tests (fixtures)
]
"main.py" = [
    "S104",   # Allow binding to all interfaces in main
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 0
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "__pycache__", ".pytest_cache"]
targets = ["app"]
skips = ["B101", "B104"]
